--- a/index.html
+++ b/index.html
@@ -710,7 +710,46 @@
             </div>
         </div>
 
-        #
+        <div id="footer">
+            <div class="container">
+                <div class="footer-container">
+                    <div class="about-us">
+                        <div class="title-footer">
+                            <h1 class="h1-footer"><b>Về chúng tôi</b></h1>
+                        </div>
+                        <div class="content-footer">
+                            <img src="/img/ft/logo-blog-soccer-net-e1575561879581.png" alt="" class="img-ft">
+                            <p class="p-footer">
+                                <b>Blog Soccer</b> là trang blog chuyên về bóng đá, kiến thức và những thông tin liên quan đến các sự kiện bóng đá trong nước và quốc tế. Từ bóng đá Việt Nam cho đến các giải đấu hàng đầu thế giới như Ngoại hạng Anh, La Liga, Serie A,...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="note-content">
+                        <div class="title-footer">
+                            <h1 class="h1-footer"><b>LƯU Ý VỀ NỘI DUNG</b></h1>
+                        </div>
+                        <div class="content-footer">
+                            <p class="p-footer">
+                                Mọi thông tin trên website: <b>Blogsoccer.net</b> đều mang tính chất tham khảo. Và chúng tôi sẽ không chịu trách nhiệm khi bạn tự ý làm theo mà chưa hỏi ý kiến của chuyên gia, đặc biệt là những nội dung có ảnh hưởng đến tiền bạc và sức khỏe của bạn thân và gia đình.
+                            </p>
+                            <p class="p-contact">Mọi thắc mắc xin liên hệ: lienhe@minhtan.com.vn</p>
+                        </div>
+                    </div>
+
+                    <div class="hot-content">
+                        <div class="title-footer">
+                            <h1 class="h1-footer"><b>CHỦ ĐỀ HOT</b></h1>
+                        </div>
+                        <div class="content-footer">
+                            <p class="p-footer">
+                                Đỗ Hùng Dũng | Bùi Tấn Trường | Harvey Elliott | Chidera Ejuke | Huỳnh Kesley Alves | Trent Alexander-Arnold | Quế Ngọc Hải | Vũ Văn Thanh | Phạm Đức Huy | Martin Odegaard | Xherdan Shaqiri | Nguyễn Văn Toàn | Loris Karius | Nguyễn Phong Hồng Duy | Roberto Firmino | Phan Văn Đức | Radamel Falcao | Jadon Sancho | Nguyễn Quang Hải | Arturo Vidal | Sadio Mane | El Clasico | Mohamed Salah | Xuân Trường | Nathanael Mbuku | Công Phượng | Hoàng Đức | Takefusa Kubo | Omar Abdulrahman | Tiến Linh | Harry Maguire | Tuấn Anh | Duy Mạnh
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
